my current setup is a mess, but at least it is portable now

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,3 +1,15 @@
+- defaults:
+    link:
+        create: true
+        relink: true
+
 - clean: []
-- link: {}
+- link:
+    ~/.dotfiles: ''
+    ~/.gitconfig:
+    ~/.gitignore_global:
+    ~/.tmux.conf:
+    ~/.vimrc:
+    ~/.bashrc:
+
 - shell: []
