--- a/tmux.conf
+++ b/tmux.conf
@@ -42,12 +42,12 @@ setw -g automatic-rename
 set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
-set -g status-interval 5 
+set -g status-interval 1
 set -g status-left-length 90
 set -g status-right-length 60
 set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo)"
 set -g status-justify left
-set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
+set -g status-right '#(cat ~/.thyme-tmux) #[fg=Cyan]#S #[fg=white]%a %d %b %R'
 
 # set plugins
 set -g @tpm_plugins '           \
