track ackrc and thymerc; add a couple of vim plugins; fix ts support

--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,11 @@
 	path = vim/bundle/taglist.vim
 	url = https://github.com/vim-scripts/taglist.vim.git
     ignore = untracked
+[submodule "vim/bundle/vim-dispatch"]
+	path = vim/bundle/vim-dispatch
+	url = https://github.com/tpope/vim-dispatch.git
+    ignore = untracked
+[submodule "vim/bundle/vim-surround"]
+	path = vim/bundle/vim-surround
+	url = https://github.com/tpope/vim-surround.git
+    ignore = untracked
