--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 
 # Set colors
 set-option -g default-terminal "screen-256color"
+set-option -g default-shell "/bin/bash"
 
 # Set reload key to r
 bind r source-file ~/.tmux.conf
